--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,23 +5,32 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
     url: /cv/
+
+  - title: "Publications"
+    url: /publications/
     
-  - title: "Guide"
-    url: /markdown/
+  - title: "Working Papers"
+    url: /working_papers/
+
+  - title: "Honors and Awards"
+    url: /honors_and_awards/
+
+  - title: "Scholarship"
+    url: /scholarship/
+
+  # - title: "Talks"
+  #   url: /talks/    
+
+  # - title: "Teaching"
+  #   url: /teaching/    
+    
+  # - title: "Portfolio"
+  #   url: /portfolio/
+        
+  # - title: "Blog Posts"
+  #   url: /year-archive/
+        
+  # - title: "Guide"
+  #   url: /markdown/
