--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,13 @@ repository               : "winstonning.github.io/jianingcao.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "JianingCao.jpg"
   name             : "Jianing Cao"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Hong Kong, China"
   employer         : "The Hong Kong Polytechnic University"
-  uri              : "https://www.polyu.edu.hk/"
+  # uri              : "https://www.polyu.edu.hk/"
   email            : "jianing.cao@connect.polyu.hk" 
 
   # Academic websites
