--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "JianingCao.jpg"
   name             : "Jianing Cao"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "道路是曲折的，前途是光明的"
   location         : "Hong Kong, China"
   employer         : "The Hong Kong Polytechnic University"
   # uri              : "https://www.polyu.edu.hk/"
