--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,21 +5,23 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "CV"
-    url: /cv/
+  # - title: "CV"
+  #   url: /cv/
 
-  # - title: "Publications"
-  #   url: /publications/
+  - title: "Publications"
+    url: /publications/
     
-  # - title: "Working Papers"
-  #   url: /working_papers/
+  - title: "Working Papers"
+    url: /working_papers/
 
-  # - title: "Honors and Awards"
-  #   url: /honors_and_awards/
+  - title: "Honors and Awards"
+    url: /honors_and_awards/
 
-  # - title: "Scholarship"
-  #   url: /scholarship/
+  - title: "Scholarship"
+    url: /scholarship/
 
+  - title: "Study Certificates"
+   url: /study_certificates/
   # - title: "Talks"
   #   url: /talks/    
 
