--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,12 @@
 main:
   # - title: "CV"
   #   url: /cv/
+  - title: "Education"
+    url: /education/
 
+  - title: "Research Interests"
+    url: /research_interests/
+    
   - title: "Publications"
     url: /publications/
     
