--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ main:
     url: /research_interests/
 
   - title: "Research Experiences"
-    url: /research_experiences
+    url: /research_experiences/
     
   - title: "Publications"
     url: /publications/
