--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,6 +22,9 @@ main:
   - title: "Working Papers"
     url: /working_papers/
 
+  - title: "Patents"
+    url: /patents/
+
   - title: "Honors and Awards"
     url: /honors_and_awards/
 
